# resume-ai

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json
.github/workflows/: backend.yml  ci.yml  docker.yml
.husky/: commit-msg  pre-commit
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/repositories/: __init__.py  resumes.py
backend/app/routers/: __init__.py  chat.py  resumes.py
backend/app/schemas/: __init__.py  resume.py
backend/app/services/: __init__.py  llm.py
backend/tests/: conftest.py  test_chat.py  test_health.py  test_resume_schema.py  test_resumes.py
docs/: 01-phase-foundation.md  02-phase-router-and-shell.md  03a-phase-zustand.md  04a-phase-resume-store.md  04b-phase-rhf-header.md  04c-phase-section-forms.md  04d-phase-reorder-and-polish.md  05-phase-performance.md  06a-phase-backend-scaffold.md  06b-phase-resume-crud.md  06c-phase-streaming-chat.md  06d-phase-frontend-wire.md  07-phase-pdf-and-concurrent.md  08-phase-frontend-testing.md  09-phase-cicd-and-docker.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  webpack.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ErrorBoundary.tsx  ErrorFallback.tsx  RouteSkeleton.tsx  RouterErrorBoundary.tsx  Shell.tsx  ThemeManager.tsx
frontend/src/components/dev/: RenderProfiler.tsx
frontend/src/components/editor/: AutosaveIndicator.tsx  BulletsFieldArray.tsx  EditorLayout.tsx  Field.tsx  HeaderForm.tsx  ItemCard.tsx  LinksFieldArray.tsx  SectionManager.tsx  SortableHandle.tsx  SortableList.tsx
frontend/src/components/editor/sections/: EducationSectionForm.tsx  ExperienceSectionForm.tsx  ProjectsSectionForm.tsx  SkillsSectionForm.tsx
frontend/src/components/preview/: EducationPreview.tsx  ExperiencePreview.tsx  HeaderPreview.tsx  Preview.test.tsx  Preview.tsx  ProjectsPreview.tsx  SkillsPreview.tsx  formatYearMonth.ts
frontend/src/hooks/: useBackendAutosave.ts  useReduxBoundForm.ts  useSavedStatus.ts
frontend/src/routes/: Chat.tsx  Editor.tsx  Home.tsx  NotFound.tsx  Print.tsx
frontend/src/schema/: resume.ts
frontend/src/store/: benchmarkResume.ts  hooks.ts  index.ts  resumeSlice.ts  seedResume.ts  selectors.ts
frontend/src/stores/: useUiStore.ts
frontend/src/test/: setup.ts
frontend/src/test/msw/: handlers.ts  server.ts
scripts/: free-port.mjs
